--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "contactmanager",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://thilakchakravarthi.github.io/contactmanager_redux",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
     "classnames": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^7.2.1",
@@ -16,6 +18,7 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
